--- a/src/pages/list/list.css
+++ b/src/pages/list/list.css
@@ -83,3 +83,12 @@
 .listResult {
 	flex: 3;
 }
+
+.lsFooter {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 25px;
+}
