--- a/src/components/mailList/mailList.css
+++ b/src/components/mailList/mailList.css
@@ -1,5 +1,6 @@
 .mail {
 	width: 100%;
+	/* max-width: 1400px; */
 	margin-top: 50px;
 	background-color: #003580;
 	color: white;
@@ -7,7 +8,7 @@
 	flex-direction: column;
 	align-items: center;
 	gap: 20px;
-	padding: 50px;
+	padding: 50px 0 60px 0;
 }
 
 .mailInputContainer > input {
