--- a/src/pages/hotel/hotel.css
+++ b/src/pages/hotel/hotel.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin-top: 20px;
+	/* margin-top: 20px; */
 }
 
 .hotelWrapper {
@@ -62,6 +62,7 @@
 	width: 100%;
 	height: 22vh;
 	object-fit: cover;
+	cursor: pointer;
 }
 
 .hotelDetails {
@@ -110,4 +111,45 @@
 	font-weight: bold;
 	cursor: pointer;
 	border-radius: 5px;
+}
+
+.slider {
+	position: sticky;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	background-color: rgb(0, 0, 0, 0.426);
+	z-index: 999;
+	display: flex;
+	align-items: center;
+}
+
+.sliderWrapper {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.sliderImg {
+	width: 80%;
+	height: 80vh;
+}
+
+.close {
+	position: absolute;
+	top: 20px;
+	right: 20px;
+	font-size: 30px;
+	color: lightgray;
+	cursor: pointer;
+}
+
+.arrow {
+	margin: 20px;
+	font-size: 40px;
+	color: lightgray;
+	cursor: pointer;
 }
