--- a/admin/src/components/navbar/navbar.scss
+++ b/admin/src/components/navbar/navbar.scss
@@ -44,6 +44,10 @@
 					font-size: 20px;
 				}
 
+				.icon.darkMode {
+					cursor: pointer;
+				}
+
 				.avatar {
 					width: 30px;
 					height: 30px;
