--- a/admin/src/pages/newHotel/newHotel.scss
+++ b/admin/src/pages/newHotel/newHotel.scss
@@ -40,6 +40,15 @@
 					gap: 30px;
 					justify-content: space-between;
 
+					.selectRooms {
+						width: 100%;
+
+						select {
+							width: 100%;
+							padding: 10px;
+						}
+					}
+
 					.formInput {
 						width: 40%;
 
@@ -57,7 +66,7 @@
 							width: 100%;
 							padding: 5px;
 							border: none;
-							border-bottom: 1px solid gray;
+							border-bottom: 1pc solid gray;
 						}
 					}
 
